--- a/.github/workflows/project-feedback.yml
+++ b/.github/workflows/project-feedback.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install -r ./project/requirements.txt  # Replace with your actual requirements file
+        pip install -r ./project/requirements.txt 
 
     - name: Run tests
       run: ./project/tests.sh  # Replace with the actual path to your tests.sh file
