--- a/.github/workflows/project-feedback.yml
+++ b/.github/workflows/project-feedback.yml
@@ -26,6 +26,8 @@ jobs:
         pip install -r ./project/requirements.txt 
 
     - name: Run tests
-      run: ./project/tests.sh  # Replace with the actual path to your tests.sh file
-
+      run: |
+        cd project
+        chmod +x tests.sh
+        ./tests.sh
     
